--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,15 +18,15 @@
           
         </mat-panel-title>
         <mat-panel-description>
-          <p class="numbers">N° Comics: <br>{{ character.comics.available }}</p>
-          <p class="numbers">N° Series: <br>{{ character.series.available }}</p>
-          <p class="numbers">N° Stories: <br>{{ character.stories.available }}</p>
-          <p class="numbers">N° Events: <br>{{ character.events.available }}</p>
+          <p class="numbers">N° Comics: <br> {{ formatValue(character.comics) }}</p>
+          <p class="numbers">N° Series: <br>{{ formatValue(character.events) }}</p>
+          <p class="numbers">N° Stories: <br>{{ formatValue(character.series) }}</p>
+          <p class="numbers">N° Events: <br>{{ formatValue(character.stories) }}</p>
         </mat-panel-description>
       </mat-expansion-panel-header>
       <div class="image-input-container">
         <div class="character-cover">
-          <img *ngIf="character.thumbnail" [src]="character.thumbnail.path + '.' + character.thumbnail.extension" alt="{{ character.name }}">
+          <img [src]="character.thumbnail.path ? (character.thumbnail.path + '.' + character.thumbnail.extension) : character.thumbnail" alt="{{ character.name }}">
         </div>
         <div class="inputs-container">
           <p>Descripción: {{ character.description }}</p>
@@ -49,10 +49,22 @@
   </ng-container>
 </mat-accordion>
 
-<div class="pagination-controls">
-  <button (click)="changePage(1)" [disabled]="currentPage === 1">First</button>
-  <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1">Previous</button>
+<div class="pagination-controls" style="margin-top: 20px;">
+  <button (click)="changePage(1)" [disabled]="currentPage === 1" class="pagination-button blue">
+    <span class="arrow"></span> First
+  </button>
+  <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1" class="pagination-button blue">
+    <span class="arrow">←</span>
+  </button>
   <span>Page {{ currentPage }} of {{ totalPages }}</span>
-  <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages">Next</button>
-  <button (click)="changePage(totalPages)" [disabled]="currentPage === totalPages">Last</button>
+  <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages" class="pagination-button blue">
+    <span class="arrow">→</span>
+  </button>
+  <button (click)="changePage(totalPages)" [disabled]="currentPage === totalPages" class="pagination-button blue">
+    Last <span class="arrow"></span>
+  </button>
 </div>
+
+<footer>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Marvel_Logo.svg/800px-Marvel_Logo.svg.png" alt="">
+</footer>
