--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -155,12 +155,20 @@ button#actionButton {
   display: flex;
   justify-content: center;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .pagination-controls button {
   margin: 0 5px;
 }
 
+
+
+footer img {
+  max-width: 100px; /* Tamaño máximo de la imagen */
+  display: block; /* Hace que la imagen se centre correctamente */
+  margin: 0 auto; /* Centra la imagen horizontalmente */
+}
 
 /* Estilos para dispositivos móviles */
 @media screen and (max-width: 768px) {
